--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
@@ -219,7 +219,7 @@
 
                                             else
                                             {
-                                                <span class="hdM_spssc">@s</span>
+                                                <span class="hdM_spssc HYJP_Red">@s</span>
                                             }
 
                                         }
