--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/PlanData.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/PlanData.cshtml
@@ -93,7 +93,8 @@
                                                                     }
                                                                     else
                                                                     {
-                                                                        <span class="Mif_jgB">@s</span>
+                                                                     
+                                                                        <span class="Mif_jgB HYJP_Red">@s</span>
                                                                     }
                                                                 }
                                                             }
