--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
@@ -183,27 +183,94 @@
                                 <div class="ball_wrap">
 
 
-                                     @if (lType <= 62)
-                                     {
-                                         foreach (string s in numArr)
-                                         {
-                                             if (s == "19" || s == "20")
-                                             {
-                                                 <span class="ball_spB ball_red">@s</span>
-                                             }
-                                             else
-                                             {
-                                                 <span class="ball_spB ball_blue">@s</span>
-                                             }
+                                    @if (lType <= 62 && lType != 5 && lType != 2 && lType != 8 && lType != 4)
+                                    {
+                                        foreach (string s in numArr)
+                                        {
 
-                                         }
-                                     }
-                                     else if (lType == 65)
-                                     {
-                                         int a = int.Parse(numArr[0]);
-                                         int b = int.Parse(numArr[1]);
-                                         int c = int.Parse(numArr[2]);
-                                         int sum = a + b + c;
+                                            <span class="ball_spB ball_red HYJP_Red">@s</span>
+
+                                        }
+                                    }
+                                    else if (lType == 2)
+                                    {
+                                        foreach (string s in numArr)
+                                        {
+                                            int index = numArr.ToList().IndexOf(s);
+
+                                            if (index == 6)
+                                            {
+                                                <span class="ball_spB ball_red HYJP_Blue">@s</span>
+                                            }
+                                            else
+                                            {
+                                                <span class="ball_spB ball_red HYJP_Red">@s</span>
+                                            }
+
+                                        }
+                                    }
+                                    else if (lType == 4)
+                                    {
+                                        foreach (string s in numArr)
+                                        {
+                                            int index = numArr.ToList().IndexOf(s);
+
+                                            if (index == 5 || index == 6)
+                                            {
+                                                <span class="ball_spB ball_red HYJP_Blue">@s</span>
+                                            }
+                                            else
+                                            {
+                                                <span class="ball_spB ball_red HYJP_Red">@s</span>
+                                            }
+
+                                        }
+
+
+                                    }
+                                    else if (lType == 5)
+                                    {
+                                        foreach (string s in numArr)
+                                        {
+                                            string Color = Util.GetColor(s);
+                                            string ys = string.Empty;
+                                            switch (Color)
+                                            {
+                                                case "red":
+                                                    ys = "HYJP_LhRed";
+                                                    break;
+                                                case "blue":
+                                                    ys = "HYJP_LhBlue";
+                                                    break;
+                                                case "green":
+                                                    ys = "HYJP_LhGreen";
+                                                    break;
+                                            }
+                                            <span class="ball_spB ball_blue @ys">@s</span>
+                                        }
+                                    }
+                                    else if (lType == 8)
+                                    {
+                                        foreach (string s in numArr)
+                                        {
+                                            int index = numArr.ToList().IndexOf(s);
+
+                                            if (index == 7)
+                                            {
+                                                <span class="ball_spB ball_red HYJP_Blue">@s</span>
+                                            }
+                                            else
+                                            {
+                                                <span class="ball_spB ball_red HYJP_Red">@s</span>
+                                            }
+                                        }
+                                    }
+                                    else if (lType == 65)
+                                    {
+                                        int a = int.Parse(numArr[0]);
+                                        int b = int.Parse(numArr[1]);
+                                        int c = int.Parse(numArr[2]);
+                                        int sum = a + b + c;
 
                                          <span class="ball_spB ball_blue">@numArr[0]</span>
                                          <span class="ball_spB ball_blue">+</span>
