--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/PvUvIp/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/PvUvIp/Index.cshtml
@@ -1,7 +1,6 @@
 ﻿@{
     Layout = null;
 }
-<script src="/Scripts/jquery-1.8.0.min.js"></script>
 <script src="http://pv.sohu.com/cityjson?ie=utf-8"></script>
 <script type="text/javascript">
     var linkCode = "@ViewBag.LinkCode";
@@ -14,7 +13,13 @@
             setCookie("WcbCookieUv", newGuid());
 
             //发送请求保存 UV
-            $.post("/PvUvIp/AddUv", { linkCode: linkCode, type: "uv" });
+            var data = {};
+            data.type = "post";
+            data.data = { linkCode: linkCode, type: "uv" };
+            data.url = "/PvUvIp/AddUv";
+            ajaxJSON(data);
+
+          //  $.post("/PvUvIp/AddUv", );
         }
 
         var cookieIp = getCookie("WcbCookieIp");
@@ -23,10 +28,19 @@
             setCookie("WcbCookieIp", ip);
 
             //发送请求保存 Ip  需要后台判断Ip是否相同
-            $.post("/PvUvIp/AddIp", { linkCode: linkCode, type: "ip", ip: ip });
+            var data = {};
+            data.type = "post";
+            data.data = { linkCode: linkCode, type: "ip", ip: ip };
+            data.url = "/PvUvIp/AddIp";
+            ajaxJSON(data);
+           // $.post("/PvUvIp/AddIp", { linkCode: linkCode, type: "ip", ip: ip });
         }
-
-        $.post("/PvUvIp/AddPv", { linkCode: linkCode, type: "pv" });
+        var data = {};
+        data.type = "post";
+        data.data = { linkCode: linkCode, type: "pv" };
+        data.url = "/PvUvIp/AddPv";
+        ajaxJSON(data);
+      //  $.post("/PvUvIp/AddPv", { linkCode: linkCode, type: "pv" });
     }
 
     //生成32位GUID
@@ -58,5 +72,56 @@
             }
         }
         return ""
+    }
+
+    //发送异步请求
+    function ajaxJSON(params) {
+        params.type = (params.type || 'GET').toUpperCase();
+        params.data = params.data || {};
+        var formatedParams = this.formateParams(params.data, params.cache);
+        var xhr;
+        //创建XMLHttpRequest对象
+        if (window.XMLHttpRequest) {
+            //非IE6
+            xhr = new XMLHttpRequest();
+        } else {
+            xhr = new ActiveXObject('Microsoft.XMLHTTP');
+        }
+        //异步状态发生改变，接收响应数据
+        xhr.onreadystatechange = function () {
+            if (xhr.readyState == 4 && xhr.status == 200) {
+                if (!!params.success) {
+                    if (typeof xhr.responseText == 'string') {
+                        params.success(JSON.parse(xhr.responseText));
+                    } else {
+                        params.success(xhr.responseText);
+                    }
+                }
+            } else {
+                params.error && params.error(status);
+            }
+        }
+        if (params.type == 'GET') {
+            //连接服务器
+            xhr.open('GET', (!!formatedParams ? params.url + '?' + formatedParams : params.url), true);
+            //发送请求
+            xhr.send();
+        } else {
+            //连接服务器
+            xhr.open('POST', params.url, true);
+            xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+            //发送请求
+            xhr.send(formatedParams);
+        }
+    }
+    function formateParams(data, isCache) {
+        var arr = [];
+        for (var name in data) {
+            arr.push(encodeURIComponent(name) + '=' + encodeURIComponent(data[name]));
+        }
+        if (isCache) {
+            arr.push('v=' + (new Date()).getTime());
+        }
+        return arr.join('&');
     }
 </script>
